Initial commit of the loan application backend

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=Spr020704
 DB_DATABASE=loan_app
 PORT=3000
 JWT_SECRET=your_super_secret_key_for_jwt
