--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 
 # Compiled TypeScript files
 /dist
+
+# Environment Variables - IMPORTANT
+.env
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
